# chitin

./: .gitignore  Cargo.toml  README.md
chitin/: Cargo.toml
chitin-core/: Cargo.toml
chitin-core/src/: chitin_util.rs  lib.rs  util.rs
chitin-derive/: Cargo.toml
chitin-derive/src/: lib.rs
chitin-model/: Cargo.toml
chitin-model/src/: lib.rs
chitin/src/: lib.rs
doc/: 文件.md
examples/: .gitignore  Cargo.toml  README.md  build.rs  codegen.rs  codegen.sh  hand_written.rs  main.rs  model.rs  query.rs
examples/client/: api.ts  api_trait2.ts  imagine_api_trait.ts  index.ts  package.json
examples/src/: api.rs  api_trait2.rs  main.rs  model.rs  model_root.rs  query.rs  query2.rs
examples/with_hyper/: main.rs
