[package]
name = "chitin"
version = "0.1.0"
authors = ["why8ther <lturtsamuel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chitin_derive = { path = "../chitin-derive" }
chitin_core = { path = "../chitin-core" }
chitin_model = { path = "../chitin-model" }