[package]
name = "examples"
version = "0.1.0"
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "codegen"
path = "codegen.rs"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
chitin = { path = "../chitin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.31"
